--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           <div class="zoro">
             <p class="hello">Hello I'm</p>
             <h1>Manuel Robles</h1>
-            <p class="uiux">Web Developer</p>
+            <!-- <p class="uiux">Web Developer</p> -->
           </div>
           <div class="hero-buttons">
             <a href="#bottom" class="message-me">MESSAGE ME</a>
@@ -56,7 +56,7 @@
         <div class="head-shot"></div>
         <div class="about">
           <div class="head">
-            <h2>Manuel</h2>
+            <!-- <h2>Manuel</h2> -->
             <p class="disc">Web <span class="about-accent grey">Developer</span> based in <span class="about-accent">New Jersey</span>.</p>       
             <p class="bio">I develop websites for customers of all sizes, specializing in creating, modern websites, web services and online stores. (Fun fact: I developed and hosted this website on a server i built myself, and i can do the same for you!)</p>
           </div>
