--- a/src/index.html
+++ b/src/index.html
@@ -34,22 +34,9 @@
             <!-- <p class="uiux">Web Developer</p> -->
           </div>
           <div class="hero-buttons">
-            <a href="#bottom" class="message-me">MESSAGE ME</a>
-            <!-- <a href="#" class="explore">Explore My Latest Project</a> they can just scroll-->
+            <a href="#wrapper" class="message-me">MESSAGE ME</a>
           </div>
         </div>
-        <!-- <div class="slide"> dont have projects yet
-          <div class="counter">
-            <p class="selected">01</p>
-            <p class="number">/ 05</p>
-          </div>
-          <div class="pics">
-            <img class="" src="assets/header.png" alt="">
-          </div>
-          <div class="arrows">
-            <div class="prev">PREV</div>
-            <div class="next">NEXT</div>
-          </div> -->
         </div>
       </section>
       <section class="section aboutme1">
