--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,6 @@
           <div class="zoro">
             <p class="hello">Hello I'm</p>
             <h1>Manuel Robles</h1>
-            <!-- <p class="uiux">Web Developer</p> -->
           </div>
           <div class="hero-buttons">
             <a href="#wrapper" class="message-me">MESSAGE ME</a>
@@ -49,15 +48,12 @@
           </div>
           <div class="info">
             <ul>
-              <!-- <li><div class="list">Birthday</div>|<div class="fact">16th august 2000</div></li> -->
               <li><div class="list">Residence</div>|<div class="fact">South Jersy Area</div></li>
               <li><div class="list">Age</div>|<div class="fact">23</div></li>
-              <!-- <li><div class="list">Address</div>|<div class="fact">Bangladesh</div></li> -->
             </ul>
             <ul>
               <li><span class="list">E-mail</span>|</span><span class="fact">donate@mail.com</span></li>
               <li><span class="list">Phone</span>|<span class="fact">856-397-7505</span></li>
-              <!-- <li><span class="list">Skype</span>|<span class="fact">skype.123</span></li> -->
               <li><span class="list">Freelance</span>|<span class="fact">Available</span></li>
             </ul>
           </div>
@@ -68,15 +64,6 @@
         <label for="section" class="title">MY PORTFOLIO</label>
       </div>
       <section class="section work">
-        <!-- <div class="port-nav">
-          <ul class="port">
-            <li>All</li>
-            <li>UI/UX Projects</li>
-            <li>Case Studies</li>
-            <li>Mobile Apps</li>
-            <li>Dashboard</li>
-          </ul>
-        </div> -->
         <div class="projects">
           <img src="assets/photo.png" alt="">
           <img src="assets/photo2.png" alt="">
@@ -112,7 +99,7 @@
       </section>
         <div class="wrapper">
           <header>Send me a Message</header>
-          <form action="#">
+          <form action="message.php" method="post">
             <div class="dbl-field">
               <div class="field">
                 <input type="text" name="name" placeholder="Enter your name">
